<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editText_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="Enter your name"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:imeOptions="actionDone"/>

        <TextView
            android:id="@+id/textView_topping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/topping"
            android:textAlignment="center"
            style="@style/CustomText"/>

        <CheckBox
            android:id="@+id/checkBox_cream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="checkBox"
            android:text="@string/whipped_cream"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox_chocolate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:onClick="checkBox"
            android:text="@string/chocolate"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_qty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:text="@string/quantity"
            android:textAlignment="center"
            style="@style/CustomText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_less"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="decrement"
                android:text="@string/minus"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/textView_qty_value"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/quantity_text"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_plus"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:onClick="increment"
                android:text="@string/plus"
                android:textSize="36sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            style="@style/CustomText" />

        <TextView
            android:id="@+id/textView_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_order"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:onClick="submitOrder"
            android:text="@string/order"
            android:textSize="30sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>